<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>InventarioCamerinoSports</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>flatlaf-3.1.1</groupId>
            <artifactId>flatlaf-3.1.1</artifactId>
            <version>3.1.1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>flatlaf-intellij-themes-3.1.1</groupId>
            <artifactId>flatlaf-intellij-themes-3.1.1</artifactId>
            <version>3.1.1</version>
        </dependency>
        <dependency>
            <groupId>mysql-connector-java-5.1.23-bin</groupId>
            <artifactId>mysql-connector-java-5.1.23-bin</artifactId>
            <version>5.1.23</version>
        </dependency>
        <dependency>
            <groupId>RojeruSan.full_9.6</groupId>
            <artifactId>RojeruSan.full_9.6</artifactId>
            <version>9.6</version>
        </dependency>
        <dependency>
            <groupId>TimingFramework-0.55</groupId>
            <artifactId>TimingFramework-0.55</artifactId>
            <version>0.55</version>
        </dependency>
        <dependency>
            <groupId>com.github.hammelion</groupId>
            <artifactId>jintertype</artifactId>
            <version>1.1</version>
            <type>jar</type>
            <exclusions>
                <exclusion>
                    <groupId>org.javassist</groupId>
                    <artifactId>javassist</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.toedter</groupId>
            <artifactId>jcalendar</artifactId>
            <version>1.4</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <exec.mainClass>com.mycompany.inventariocamerinosports.InventarioCamerinoSports</exec.mainClass>
    </properties>
</project>